# proteo

./: .gitignore  Makefile  README.md  conda-lock.yml  conda.yaml  pyproject.toml  ray_results_search_hyperparameters.csv  ray_results_search_hyperparameters_0629.csv
5xFAD_paper/: .Rhistory
MLA-GNN/: Py_WGCNA_gbmlgg.py  model_GAT.py  test_cv.py  test_model.py
MLA-GNN/example_data/input_adjacency_matrix/: 5xFAD_paper_split15_adjacency_matrix.csv  split1_adjacency_matrix.csv
MLA-GNN/pretrained_models/: train_opt.txt
MLA-GNN/results/grad/GAT_features_720d_model/: split1_all_GAT_te_features.csv
MLA-GNN/results/grad/preds/: split1_all_test_preds_labels.csv
fine/fine/: config.yml  config_utils.py  main.py
fine/fine/data/: complex.py  data_loading.py  datasets.py  graph.py  parallel.py  utils.py
fine/fine/models/: higher.py
notebooks/: LinearMixedEffectsModels.ipynb  plot_iris_dataset.ipynb  plot_kmeans_digits.ipynb  plot_pca_3d.ipynb  probability_of_error.ipynb  toy_examples_fid.ipynb  why_importance_scores.ipynb
proteo/: allftd_datasets.py  benchmarking_stats.ipynb  callbacks.py  callbacks_no_val.py  callbacks_ray.py  callbacks_ray_folds.py  checkpoint_analysis.ipynb  checkpoint_analysis.py  config.yml  config_utils.py  data_exploration.ipynb  datasets.py  evaluate.py  evaluate_fidelity.py  evaluation.ipynb  evaluation.py  fidelity.ipynb  k_fold_analysis.ipynb  main.py  main_folds.py  main_folds_non_nn.py  module_assignments.py  paper_plots.ipynb  query_llm.py  query_pubmed_llm.py  rich_gi.py  test_model.py  toy_examples_fid.ipynb  train.py  train_no_val.py  utils.py  visualizing_attention.py
proteo/data/: data_loading.py
proteo/datasets/: age_adjusted_ftd.ipynb  csv_preprocessing.ipynb  ftd.py  ftd_folds.py  mlagnn.py  toy.py
proteo/models/: gat.py  gat_v4.py  gat_v5.py  gats.py  graphMAE2_build_model.py  graphMAE2_init.py  higher.py  model_GAT.py  readout.py
queries_llm/: NPTX2_2025-06-11.csv  NPTX2_summary_2025-06-11.txt
